parseCsv can take a Reader and return a CsvLineReader ( which generates lines of CSV data at a time )